# perspective

./: package.json
cmake/: flatbuffers.txt.in
cmake/arrow/: CMakeLists.txt
cmake/flatbuffers/: CMakeLists.txt
cpp/perspective/: CMakeLists.txt
cpp/perspective/src/cpp/: arrow.cpp  emscripten.cpp  storage.cpp
cpp/perspective/src/include/perspective/: arrow.h  binding.h
python/perspective/perspective/include/perspective/: python.h
python/perspective/perspective/src/: fill.cpp
python/perspective/perspective/table/: _accessor.py
scripts/: clean.js  script_utils.js
